[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Images/Tank/Wheels/Both Forward/BothForward2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Tank/Wheels/Left Forward Right Backwards/LeftForwardRightBackwards2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Tank/Wheels/Left Forward Right Backwards/LeftForwardRightBackwards3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Tank/Base/Tank.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Tank/Wheels/Left Backwards Right Forward/LeftBackwardsRightForward2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/Tank/Wheels/Both Forward/BothForward3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Tank/Wheels/Both Backwards/BothBackwards3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Audio/Explosion.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Images/Tank/Wheels/Both Backwards/BothBackwards2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/Tank/Wheels/Both Forward/BothForward1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/Tank/Wheels/Idle/Idle.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/Tank/Wheels/Left Forward Right Backwards/LeftForwardRightBackwards1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/Tank/Wheels/Left Backwards Right Forward/LeftBackwardsRightForward3.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/Tank/Wheels/Left Backwards Right Forward/LeftBackwardsRightForward1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/Tank/Wheels/Both Backwards/BothBackwards1.png" type="Texture" id=15]
[ext_resource path="res://Scripts/Player/Tank.gd" type="Script" id=16]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": true,
"name": "BothBackwards",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 1 ), ExtResource( 6 ) ],
"loop": true,
"name": "BothForward",
"speed": 10.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 5 ), ExtResource( 13 ) ],
"loop": true,
"name": "LeftBackwardsRightForward",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "LeftForwardRightBackwards",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Tank" type="KinematicBody2D" groups=["player"]]
physics_interpolation_mode = 2
z_index = 5
script = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="." groups=["player"]]
frames = SubResource( 3 )
animation = "Idle"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Collision" type="CollisionShape2D" parent="." groups=["player"]]
shape = SubResource( 1 )

[node name="BulletSpawnPoint" type="Position2D" parent="."]
position = Vector2( 0, -20 )

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="killed" from="." to="." method="_on_killed"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_shoot_timeout"]
